Optimize typography, load fonts from CDN, tweak copywriting

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
           <a href="vs-ms.html" class="navigation__link {% if page.name == 'vs-ms.md' %} navigation__link-selected {% endif %}">SCS vs. Microservice</a>
           <a href="links.html" class="navigation__link {% if page.name == 'links.md' %} navigation__link-selected {% endif %}">Links</a>
           <div class="navigation__button">
-            <a href="https://github.com/innoq/SCS" class="navigation__button-link">Get it on Github</a>
+            <a href="https://github.com/innoq/SCS" class="navigation__button-link">Contribute on GitHub</a>
           </div>
         </div>
       </nav>
@@ -48,23 +48,23 @@
       {{ content }}
     {% endif %}
     <a href="#" id="to-top">
-      <img src="img/chevron-up.svg" alt="Scroll To Top" class="to-top">
-      <span class="sr-only">Scroll To Top</span>
+      <img src="img/chevron-up.svg" alt="Scroll to top" class="to-top">
+      <span class="sr-only">Scroll to top</span>
     </a>
     <a href="#" id="jump-to-next-section">
-      <img src="img/chevron-down.svg" alt="Scroll To Next Section" class="jump-to-next-section">
-      <span class="sr-only">Scroll To Next Section</span>
+      <img src="img/chevron-down.svg" alt="Scroll to next section" class="jump-to-next-section">
+      <span class="sr-only">Scroll to next section</span>
     </a>
   </main>
   <footer class="footer">
     <div class="container footer-container">
-      <a href="https://www.innoq.com/en/?pk_campaign=octopim&amp;pk_source=octopim-lp" target="_blank" class="link-footer">
-        <img src="img/INNOQ_Logo.svg" alt="INNOQ Logo" class="footer-logo"></img>
+      <a href="https://www.innoq.com/" target="_blank" class="link-footer">
+        <img src="img/INNOQ_Logo.svg" alt="INNOQ" class="footer-logo"></img>
       </a>
       <h4 class="footer-heading">We give technology a purpose. We future-proof your ideas.</h4>
-      <p class="footer-text">Honest consulting, innovative thinking, and a passion for software development means: We deliver successful software solutions, infrastructure and business models.<br><br>
-        <a href="https://www.innoq.com/en/?pk_campaign=octopim&amp;pk_source=octopim-lp" target="_blank" class="link-footer">Visit our Website</a><br>
-        <a href="https://www.innoq.com/en/datenschutz" target="_blank" class="link-footer">Privacy Policy</a>
+      <p class="footer-text">Honest consulting, innovative thinking, and a passion for software development means: We deliver successful software solutions, infrastructure, and business models.<br><br>
+        <a href="https://www.innoq.com" target="_blank" class="link-footer">Visit our website</a><br>
+        <a href="https://www.innoq.com/privacy" target="_blank" class="link-footer">Privacy</a>
       </p>
     </div>
   </footer>
