--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="{{page.description}}">
+  <meta property="og:image" content="https://scs-architecture.org/img/{{page.og_image}}" />
+  <meta property="og:title" content="{{page.title}}" />
+  <meta property="og:description" content="{{page.description}}" />
+  <meta property="og:image:width" content="4000" />
+  <meta property="og:image:height" content="2000" />
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image" content="https://scs-architecture.org/img/{{page.og_image}}">
+  <meta name="twitter:title" content="{{page.title}}">
+  <meta name="twitter:description" content="{{page.description}}">
   <link rel="stylesheet" href="css/vars.css">
   <link rel="stylesheet" href="css/typography.css">
   <link rel="stylesheet" href="css/default.css">
