Add favicons in all varieties

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,10 @@
   <link rel="stylesheet" href="css/default.css">
   <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="css/navigation.css">
-  <link rel="icon" type="image/x-icon" href="./img/favicon.ico" sizes="any">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon.ico">
+  <link rel="icon" href="img/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+  <link rel="manifest" href="site.webmanifest">
   <script defer data-domain="scs-architecture.org" src="https://plausible.io/js/script.outbound-links.js"></script>
 </head>
 
