--- a/css/typography.css
+++ b/css/typography.css
@@ -5,7 +5,7 @@ h1 {
     font-family: FFMarkWebPro, sans-serif;
     font-size: 4rem;
     font-weight: 900;
-    line-height: 4rem;
+    line-height: 1em;
 }
 
 h2 {
@@ -15,7 +15,7 @@ h2 {
     font-family: FFMarkWebPro, sans-serif;
     font-size: 2.5rem;
     font-weight: 900;
-    line-height: 2.5rem;
+    line-height: 1.25em;
 }
 
 h3 {
@@ -25,7 +25,7 @@ h3 {
     font-family: FFMarkWebPro, sans-serif;
     font-size: 1.5rem;
     font-weight: bold;
-    line-height: 1.5rem;
+    line-height: 1.5em;
 }
 
 h4 {
@@ -35,7 +35,7 @@ h4 {
     font-family: FFMarkWebPro, sans-serif;
     font-size: 1.5rem;
     font-weight: bold;
-    line-height: 2rem;
+    line-height: 1.5em;
 }
 
 h5 {
@@ -45,7 +45,7 @@ h5 {
     font-family: FFMarkWebPro, sans-serif;
     font-size: 1.125rem;
     font-weight: bold;
-    line-height: 1.75rem;
+    line-height: 1.75em;
 }
 
 p {
@@ -53,7 +53,7 @@ p {
     margin-bottom: 1.75rem;
     font-family: FFMarkWebPro, sans-serif;
     font-size: 1.125rem;
-    line-height: 1.75rem;
+    line-height: 1.5em;
 }
 
 a {
