adapts anchor tags on index.html that they are not hiding below the sticky navbar.
See [#62](https://github.com/innoq/SCS/issues/62)

--- a/css/index.css
+++ b/css/index.css
@@ -92,6 +92,10 @@
   align-items: center;
 }
 
+.tile__heading-anchor:target {
+  scroll-margin-top: 20em;
+}
+
 .tile__heading-text {
   margin: 0;
 }
