--- a/css/vars.css
+++ b/css/vars.css
@@ -3,7 +3,7 @@
     --color-secondary: #2e343b;
     --color-text: #333;
     --color-headings: #2e343b;
-    --color-bg: #f8f8fa;
+    --color-highlight-bg: #f8f8fa;
     --content-max-width: 1024px;
     --content-minimum-side-spacing: 5vw;
 }
