--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,7 @@
   flex-direction: column;
   justify-content: center;
   min-height: 100vh;
-  background-color: var(--color-bg);
+  background-color: var(--color-highlight-bg);
 }
 
 .page-cover-container {
@@ -74,7 +74,7 @@
 }
 
 .tile {
-  background-color: var(--color-bg);
+  background-color: var(--color-highlight-bg);
   padding: 5%;
 }
 
@@ -123,7 +123,7 @@
   display: grid;
   grid-template-rows: repeat(2, 1fr);
   grid-template-columns: 1fr;
-  background-color: white;
+  background-color: transparent;
   padding: 1rem;
   border-radius: 0.5rem;
   width: 90%;
@@ -131,7 +131,7 @@
 }
 
 .idea:nth-of-type(even) {
-  background-color: var(--color-bg);
+  background-color: var(--color-highlight-bg);
 }
 
 .idea div {
