--- a/css/index.css
+++ b/css/index.css
@@ -115,6 +115,10 @@
 }
 
 /* idea */
+section#the-idea {
+  scroll-margin-top: 10em;
+}
+
 .container-with-the-idea {
   display: flex;
   flex-direction: column;
@@ -167,6 +171,10 @@
   margin: 0 2rem 2rem 2rem;
 }
 
+.idea-text__link {
+  font-size: 1.5rem;
+}
+
 @media screen and (min-width: 768px) {
   .container-with-the-idea {
     gap: 5rem;
@@ -201,6 +209,10 @@
 
   .idea-text {
     margin: 2rem;
+  }
+
+  .idea-text__link {
+    font-size: 2rem;
   }
 
   .idea__img-container {
