Add site notice

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,6 +70,7 @@
       <p class="footer-text">Honest consulting, innovative thinking, and a passion for software development means: We deliver successful software solutions, infrastructure, and business models.<br><br>
         <a href="https://www.innoq.com" target="_blank" class="link-footer">Visit our website</a><br>
         <a href="https://www.innoq.com/privacy" target="_blank" class="link-footer">Privacy</a>
+        <a href="https://www.innoq.com/impressum" target="_blank" class="link-footer">Site notice</a>
       </p>
     </div>
   </footer>
