Fix pages not being indexed by search engines by declaring canonical URLs
I don’t see any chance to establish canonical redirects with the current Jekyll/GitHub pages setup

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,7 @@
   <link rel="icon" href="img/favicon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
   <link rel="manifest" href="site.webmanifest">
+  <link rel="canonical" href="{{page.canonical_url}}"
   <script defer data-domain="scs-architecture.org" src="https://plausible.io/js/script.outbound-links.js"></script>
 </head>
 
