Add lazy loading

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,7 +65,7 @@
   <footer class="footer">
     <div class="container footer-container">
       <a href="https://www.innoq.com/" target="_blank" class="link-footer">
-        <img src="img/INNOQ_Logo.svg" alt="INNOQ" class="footer-logo"></img>
+        <img loading="lazy" src="img/INNOQ_Logo.svg" alt="INNOQ" class="footer-logo"></img>
       </a>
       <h3 class="footer-heading">We give technology a purpose. We future-proof your ideas.</h3>
       <p class="footer-text">Honest consulting, innovative thinking, and a passion for software development means: We deliver successful software solutions, infrastructure, and business models.<br><br>
