Add card tag for twitter handle

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
   <meta name="twitter:image" content="https://scs-architecture.org/img/{{page.og_image}}">
   <meta name="twitter:title" content="{{page.title}}">
   <meta name="twitter:description" content="{{page.description}}">
+  <meta name="twitter:site" content="@scsarchitecture">
   <link rel="stylesheet" href="css/vars.css">
   <link rel="stylesheet" href="css/typography.css">
   <link rel="stylesheet" href="css/default.css">
