Fix line breaks, link to X profile

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,8 +71,8 @@
       <h3 class="footer-heading">We give technology a purpose. We future-proof your ideas.</h3>
       <p class="footer-text">Honest consulting, innovative thinking, and a passion for software development means: We deliver successful software solutions, infrastructure, and business models.<br><br>
         <a href="https://www.innoq.com" target="_blank" class="link-footer">Visit our website</a><br>
-        <a href="https://www.innoq.com/privacy" target="_blank" class="link-footer">Privacy</a>
-        <a href="https://www.innoq.com/impressum" target="_blank" class="link-footer">Site notice</a>
+        <a href="https://www.innoq.com/privacy" target="_blank" class="link-footer">Privacy</a><br>
+        <a href="https://www.innoq.com/impressum" target="_blank" class="link-footer">Site notice</a><br>
       </p>
     </div>
   </footer>
